# cs448-intro-information-security

./: .editorconfig  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml
ddos/scapy/: main.py
ddos/scratch/: main.py
llvm-analyzer/: Makefile  README.md  docker-compose.yml
llvm-analyzer/src/: domain.ml  dune  main.ml  utils.ml
llvm-analyzer/test/: Makefile  example3.c  example4.c  example5.expected  homework.h
llvm-analyzer/test/advanced/: sign_adv1.c  sign_adv1.expected  sign_adv2.c  sign_adv3.c  sign_adv3.expected  sign_adv4.expected  taint_adv1.c  taint_adv2.expected  taint_adv4.expected
llvm-analyzer/test/simple/: dune  sign_simple_if_else.c  sign_simple_if_else.expected  sign_simple_loop.c  sign_simple_mul.expected  sign_simple_safe.c  sign_simple_sub.c  sign_simple_sub.expected  taint_simple3.c  taint_simple3.expected  taint_simple4.expected  taint_simple5.expected  taint_simple6.c  taint_simple6.expected
llvm-analyzer/test/unit/: dune  unitSignEval.ml
llvm-fuzzer/: .editorconfig  Makefile  README.md  docker-compose.yml
llvm-fuzzer/src/: dune  fuzzer.ml  sanitizer.ml
llvm-fuzzer/test/: Makefile  example1.c  example1.cov.expected  example1.expected  example2.c  example2.cov.expected  example3.c  run_fuzzer.py
llvm-fuzzer/test/advanced/: adv_1.c  adv_1.cov.expected  adv_1.expected  double_loop.c  exact_cmp.c  if_for_if.c  if_for_if.expected  loop_if.c  loop_if.cov.expected  two_cond.c
llvm-fuzzer/test/simple/: length.c  simple_call.c  simple_empty.c  simple_error.c  simple_error.expected  simple_if_else.c  simple_loop.c  simple_loop.cov.expected  simple_mul.c  simple_mul.expected  simple_safe.cov.expected  simple_sub.c  test.sh
llvm-fuzzer/test/string_seed/: input.txt
llvm-sanitizer/: README.md  docker-compose.yml
oracle-padding/: Makefile  main.py  oracle_python_v1_2.py
oracle-padding/ciphertexts/: ciphertext_01.txt  ciphertext_02.txt  ciphertext_03.txt  ciphertext_04.txt  ciphertext_05.txt  ciphertext_06.txt  ciphertext_07.txt  ciphertext_08.txt  ciphertext_09.txt  ciphertext_10.txt  ciphertext_11.txt  ciphertext_12.txt  ciphertext_13.txt  ciphertext_14.txt  ciphertext_15.txt  ciphertext_16.txt  ciphertext_17.txt  ciphertext_18.txt  ciphertext_19.txt  ciphertext_20.txt  plaintext_01.txt  plaintext_02.txt  plaintext_03.txt  plaintext_04.txt  plaintext_05.txt  plaintext_06.txt  plaintext_07.txt  plaintext_08.txt  plaintext_09.txt  plaintext_10.txt  plaintext_12.txt  plaintext_13.txt  plaintext_14.txt  plaintext_15.txt  plaintext_16.txt  plaintext_17.txt  plaintext_18.txt  plaintext_19.txt  plaintext_20.txt
oracle-padding/handout/: Makefile
src/: analysis.ml  campaign.ml  coverage.ml  domain.ml  dune  fuzzer.ml  instrument.ml  main.ml  mutation.ml  seeds.ml  semantics.ml  utils.ml
test/: Makefile  README.md  compute_coverage.sh  dune  example1.c  example1.sign.expected  example2.c  example2.expected  example3.c  example3.cov.expected  example3.expected  example4.expected  example5.c  json_parser.c  test.sh
test/advanced/: adv_1.c  calc.c  double_loop.c  double_loop.cov.expected  double_loop.expected  dune  if_for_if.c  if_for_if.cov.expected  loop_if.c  loop_if.expected  runtime.c  sign_adv2.expected  sign_adv4.c  taint_adv1.expected  taint_adv2.c  taint_adv3.c  taint_adv3.expected  taint_adv4.c
test/simple/: dune  homework.h  sign_simple_error.c  sign_simple_error.expected  sign_simple_loop.expected  sign_simple_mul.c  simple_error.c  simple_if_else.c  simple_if_else.expected  simple_loop.c  simple_loop.expected  simple_mul.c  simple_safe.c  simple_string.c  simple_sub.c  simple_sub.expected  taint_simple1.c  taint_simple1.expected  taint_simple2.c  taint_simple2.expected  taint_simple4.c  taint_simple5.c
