(rule
 (deps example1.ll runtime.c)
 (targets example1.output example1.cov)
 (action
  (run ./test.sh example1.ll)))

(rule
 (alias runtest)
 (action
  (diff example1.expected example1.output)))

(rule
 (alias runtest)
 (action
  (diff example1.cov.expected example1.cov)))

(rule
 (deps example2.ll runtime.c)
 (targets example2.output example2.cov)
 (action
  (run ./test.sh example2.ll)))

(rule
 (alias runtest)
 (action
  (diff example2.expected example2.output)))

(rule
 (alias runtest)
 (action
  (diff example2.cov.expected example2.cov)))

(rule
 (deps example3.ll runtime.c)
 (targets example3.output example3.cov)
 (action
  (run ./test.sh example3.ll)))

(rule
 (alias runtest)
 (action
  (diff example3.expected example3.output)))

(rule
 (alias runtest)
 (action
  (diff example3.cov.expected example3.cov)))
